# flight-booking-system

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: security.yml
docs/product/: jobs.yaml  vision.md
docs/product/architecture/: adr-001-hexagonal-oop.md  adr-002-python-fastapi-stack.md  adr-003-money-decimal-banker-rounding.md  adr-004-cabin-layout-per-seat-classification.md  adr-005-pricing-rules-pure-functions.md  adr-006-quote-store-and-audit-log.md  adr-007-scope-deferments.md  adr-008-inmemory-persistence-and-lock-primitive.md  brief.md  c4-diagrams.md
docs/product/journeys/: book-a-flight-visual.md  book-a-flight.yaml
scripts/: race_last_seat.py
src/flights/: __init__.py
src/flights/application/: booking_service.py  quote_service.py  search_service.py  seat_hold_service.py  seat_map_service.py
src/flights/composition/: wire.py
src/flights/domain/: ports.py  pricing.py  rules.py
tests/acceptance/flight-booking-system/: milestone-02-catalog-search.feature  milestone-03-seat-map.feature  milestone-04-dynamic-pricing.feature  milestone-05-price-breakdown.feature  milestone-06-quote-ttl-audit.feature  milestone-07-seat-locking.feature  milestone-08-round-trip-filters.feature  walking-skeleton.feature
tests/e2e/: test_race_last_seat.py
tests/fixtures/: cabin.py  catalog.py
tests/integration/adapters/: test_jsonl_audit.py
tests/integration/http/: test_booking_flow.py  test_booking_seat_validation.py  (+11 more)
tests/support/: audit_replay.py
(+61 files in other folders)
